--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,9 @@ repository = "https://github.com/rust-learn-days/ecosystem"
 serde_json = "1.0.120"
 anyhow = "1.0.86"
 thiserror = "1.0.58"
+tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
+time = "0.3.36"
+tracing = "0.1.40"
+tracing-subscriber = "0.3.18"
+axum = "0.7.5"
+tracing-appender = "0.2.3"
